--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Copse|Seaweed+Script|Sedgwick+Ave&display=swap"
+      href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
